--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="img/filomundii.jpg.png" alt="Logo FiloMundi"></div>
+    <div class="logo"><img src="img/logo.png" alt="Logo FiloMundi"></div>
     <nav>
       <ul>
+       
+</div>
+<div class="search-box">
+  <input type="text" id="searchInput" placeholder="Pesquisar..." />
+  <button class="search-icon" id="searchBtn" aria-label="Pesquisar">🔍</button>
+</div>
+
         <li>Home</li>
-        <li>Filosófos ▾</li>
         <li>Sobre a Matéria ▾</li>
         <li>Sobre os Professores</li>
         <li>Contato ▾</li>
@@ -24,10 +30,6 @@
     <section class="intro">
       <h1>Aqui você encontrará diversos conteúdos sobre filosofia</h1>
       <p>Como filósofos famosos, frases filosóficas e conceitos fundamentais</p>
-      <div class="search-box">
-        <input type="text" placeholder="Pesquisar" />
-        <button>Pesquisar</button>
-      </div>
     </section>
     
     <section class="about-site">
