--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
       <ul>
        
 </div>
-<div class="search-box">
-  <input type="text" id="searchInput" placeholder="Pesquisar..." />
-  <button class="search-icon" id="searchBtn" aria-label="Pesquisar">🔍</button>
-</div>
-
-        <li>Home</li>
-        <li>Sobre a Matéria ▾</li>
-        <li>Sobre os Professores</li>
-        <li>Contato ▾</li>
+<div class="search-container">
+    <input type="text" class="search-box" placeholder="Pesquise aqui...">
+    <button class="search-button"> 🔍</button>
+  </div>
+        <li>Home <a href="index.html"></a></li>
+        <li>Sobre a Matéria ▾ <a href="index2.html"></a></li>
+        <li>Sobre os Professores<a href="index3.html>"</li>
+        <li>Contato ▾<a  href="index4.html"></a></li>
       </ul>
     </nav>
   </header>
@@ -81,26 +80,32 @@
       <div class="cards">
         <div class="card">
           <img src="img/socrates.jpg" alt="Sócrates" class="card-img">
+          <p>"Conhece-te a ti mesmo"</p>
           <div class="card-name">Sócrates</div>
         </div>
         <div class="card">
           <img src="img/platao.jpg" alt="Platão" class="card-img">
+          <p>V"O que mais vale não é viver, mas viver bem"</p>
           <div class="card-name">Platão</div>
         </div>
         <div class="card">
           <img src="img/aristoteles.jpg" alt="Aristóteles" class="card-img">
+          <p>“O ignorante afirma, o sábio duvida, o sensato reflete.”</p>
           <div class="card-name">Aristóteles</div>
         </div>
         <div class="card">
           <img src="img/descartes.jpg" alt="Descartes" class="card-img">
+          <p>"Penso, logo existo"</p>
           <div class="card-name">Descartes</div>
         </div>
         <div class="card">
           <img src="img/kant.jpg" alt="Kant" class="card-img">
+          <p> "“Você é livre no momento em que não busca fora de si mesmo alguém para resolver os seus problemas.”</p>
           <div class="card-name">Immanuel Kant</div>
         </div>
         <div class="card">
           <img src="img/nietzsche.jpg" alt="Nietzsche" class="card-img">
+          <p>"Deus está morto" </p>
           <div class="card-name">Friedrich Nietzsche</div>
         </div>
       </div>
