--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -19,9 +19,9 @@
       <p>Matenha contato conosco para que possemos te ajudar ainda mais:</p>
       <nav>
         <a href="index.html">Home</a>
-        <a href="index1.html">Receitas</a>
-        <a href="index2.html">Contato</a>
-        <a href="index3.html">Cadastro</a>
+        <a href="index1.html">Correntes Filosóficas</a>
+        <a href="index2.html">Curiosidades</a>
+        <a href="index3.html">Contato</a>
       </nav>
     </div>
   </header>
